--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="scroll-smooth" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link class="" rel="icon" sizes="192x192"type="image/svg+xml" href="/src/assets/favicon-protfolio.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio-navjot</title>
   </head>
